force-app/main/default/objects/Team_Assignment__c/Team_Assignment__c.object-meta.xml
<CustomObject>
    <label>Team Assignment</label>
    <nameField>
        <displayFormat>ASSIGNMENT-{0000}</displayFormat>
        <label>Team Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>