force-app/main/default/objects/Team_Assignment__c/fields/Hired_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Hired_Candidate__c</fullName>
    <label>Hired Candidate</label>
    <referenceTo>Hired_Candidate__c</referenceTo>
    <relationshipLabel>Team Assignments</relationshipLabel>
    <relationshipName>Team_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>