force-app/main/default/objects/Team_Assignment__c/fields/Hired_Candidate_Level__c.field-meta.xml
<CustomField>
    <fullName>Hired_Candidate_Level__c</fullName>
    <label>Hired Candidate Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Candidate_Level</valueSetName>
    </valueSet>
</CustomField>