force-app/main/default/objects/Team_Assignment__c/fields/Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scrum Team</label>
    <referenceTo>Scrum_Team__c</referenceTo>
    <relationshipLabel>Team Assignments</relationshipLabel>
    <relationshipName>Team_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>